Various minor formatting edits, etc.

--- a/01_agama/ekottarika/11/EA_11_07.md
+++ b/01_agama/ekottarika/11/EA_11_07.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Numerical Discourses | Chapter 11: The Non-Returner | Alms'
+title: 'The Numerical Discourses | Chapter 11: The Non-Returner | 7. Alms'
 type: kramdown
 base: ../../../
 previous: EA_11_06.html
