--- a/01_agama/samyukta/02/SA2_6.md
+++ b/01_agama/samyukta/02/SA2_6.md
@@ -14,7 +14,7 @@ next: SA2_7.html
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {:#p1}
 
-2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand the eye and doesn’t stop or become free of desire for it, it’s not possible to correctly end suffering. *The ear, nose, tongue, body, and mind are likewise.*
+2\. It was then that the Bhagavān addressed the monks, “When one doesn’t know or understand the eye and doesn’t stop or become free of desire for it, it’s not possible to correctly end suffering. <em>The ear, nose, tongue, body, and mind are likewise.</em>
 {:#p2}
 
 3\. “Monks, if someone knows and understands the eye and stops and becomes free of desire for it, it’s possible to correctly end suffering. If someone knows and understands the eye … nose … tongue … body … mind and stops and becomes free of desire for it, it’s possible to correctly end suffering.”
