--- a/01_agama/samyukta/35/SA35_1.md
+++ b/01_agama/samyukta/35/SA35_1.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 1. The Six Abodes of Views'
+title: 'The Related Discourses | 35. Views | 1 (133). The Six Abodes of Views'
 type: kramdown
 base: ../../../
 previous: index.html
@@ -9,12 +9,12 @@ next: SA35_7.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 1. The Six Abodes of Views
+### 1 (133). The Six Abodes of Views
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “Because what exists, what is caused, adhering to what, and viewing what as self are sentient beings covered by ignorance and then take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death, and don’t know an ultimate end?”
+2\. It was then that the Bhagavān addressed the monks, “Because of what’s existence, what’s cause, adherence to what, and viewing what as self are sentient beings covered by ignorance, take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death, and don’t know an ultimate end?”
 
 The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge! Please have pity and explain this subject in detail! After hearing it, we monks will accept and approve of that explanation.”
 {: #p2}
@@ -22,7 +22,7 @@ The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma ey
 3\. The Buddha told the monks, “Listen closely, and consider it well! I will explain this for you.
 {: #p3}
 
-“Monks, because form exists, form causes something, they adhere to form, and form is viewed as self, sentient beings are covered by ignorance and then take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death, and don’t know an ultimate end. Feeling, conception, volition, and consciousness are likewise.
+“Monks, it’s because of form’s existence, form being something caused, adherence to form, and viewing form as self that sentient beings are covered by ignorance, take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death[, and don’t know an ultimate end]. <em>Feeling, conception, volition, and consciousness are likewise.</em>
 
 4\. “Monks, is form permanent, or is it impermanent?”
 {: #p4}
@@ -34,15 +34,15 @@ The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma ey
 “It’s painful, Bhagavān.”
 {: #p5}
 
-6\. “So it is, monks. If something is impermanent, it’s painful. Because this pain exists, the things it causes, its adherence, and its being viewed as self, sentient beings are covered by ignorance and then take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death, and don’t know its ultimate end.
+6\. “So it is, monks. If something is impermanent, it’s painful. Because of this pain’s existence, it being something caused, adherence to it, and viewing it as self, sentient beings are covered by ignorance, take craving as their leader, rush down the long road, turn on the wheel of birth-and-death, circulate in birth-and-death[, and don’t know its ultimate end].
 
-*Feeling, conception, volition, and consciousness are likewise.*
+<em>Feeling, conception, volition, and consciousness are likewise.</em>
 {: #p6}
 
-7\. “Therefore, monks, all forms that exist, whether past, future, or present, internal or external, coarse or fine, beautiful or ugly, or distant or near are not self, not different than self, nor are either present in the other. This is called correct wisdom. *Feeling, conception, volition, and consciousness are likewise.*
+7\. “Therefore, monks, all forms that exist, whether past, future, or present, internal or external, coarse or fine, beautiful or ugly, or distant or near are not self, not different than self, nor are either present in the other. This is called correct wisdom. <em>Feeling, conception, volition, and consciousness are likewise.</em>
 {: #p7}
 
-8\. “Thus, all that’s seen, heard, realized, recognized, sought, attained, remembered, considered, or examined[\[2\]](#n2){:#ref2} is not self, not different than self, nor are either present in other. This is called correct wisdom.
+8\. “Thus, all that’s seen, heard, realized, recognized, sought, attained, remembered, considered, or examined[\[2\]](#n2){:#ref2} is not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p8}
 
 9\. “Suppose there’s a view that says, ‘There’s a self, there’s the world, and there’s this life. They are permanent, eternal, and not subject to change.’ All of those things are not self, not different than self, nor are either present in the other. This is called correct wisdom.
@@ -60,11 +60,12 @@ The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma ey
 13\. After the Buddha spoke this sūtra, the monks who heard what the Buddha taught rejoiced and approved.
 {: #p13}
 
+---
+
 ### Notes
 
-1. {:#n1} This sutra has a similar format as [SN 22.150-158](https://suttacentral.net/sn22.150){:target="_blank"} and [SN 24](https://suttacentral.net/sn24){:target="_blank"}, but it doesn’t have a direct parallel among them. Instead, it takes up the six abodes of views found in [MN 22](https://suttacentral.net/mn22){:target="_blank"} and [MĀ 200](..\..\madhyama\MA_200.html){:target="_blank"}. As we shall see, this sets the tone for the remainder of this Saṃyukta, which segues to sutras about specific views like the suttas that make up [SN 24](https://suttacentral.net/sn24){:target="_blank"}. [\[back\]](#ref1)
-
-2. {:#n2} *remembered, considered, examined*. Ch. 隨憶、隨覺、隨觀. I surmise that the Indic original probably read: *anusmṛ-*, *anuvitark-*, *anuvicār-*, meaning roughly, “remembered,” “(initially) considered,” and “(thoroughly) examined.” Note how the Chinese translator uses 覺 for vitarka here as he would in the dhyāna formula, perhaps attempting indicate a shallow or initial consideration. “Perceiving” doesn’t really fit this context given the items covering it at the beginning of the list. [\[back\]](#ref2)
+1. {:#n1} This sūtra has a similar format as [SN 22.150 to 158](https://suttacentral.net/sn22.150){:target="_blank"} and [SN 24](https://suttacentral.net/sn24){:target="_blank"}, but it doesn’t have a direct parallel among them. Instead, it takes up the six abodes of views found in [MN 22](https://suttacentral.net/mn22){:target="_blank"} and [MĀ 200](..\..\madhyama\MA_200.html){:target="_blank"}. As we shall see, this sets the tone for the remainder of this <em>saṃyukta</em>, which segues to sūtras about specific views like the suttas that make up [SN 24](https://suttacentral.net/sn24){:target="_blank"}. [\[back\]](#ref1)
+2. {:#n2} <em>remembered, considered, examined</em>. Ch. 隨憶、隨覺、隨觀. I surmise that the Indic words are probably verbs with the roots <em>anusmṛ-</em>, <em>anuvitark-</em>, <em>anuvicār-</em>, meaning roughly, “remembered,” “(initially) considered,” and “(thoroughly) examined.” Note how the Chinese translator uses 覺 for <em>vitark-</em> here as he would in the <em>dhyāna</em> formula, perhaps attempting to indicate a shallow or initial consideration. “Perceiving” doesn’t really fit this context given the items covering it at the beginning of the list. [\[back\]](#ref2)
 
 ---
 
