--- a/01_agama/samyukta/35/SA35_49-51.md
+++ b/01_agama/samyukta/35/SA35_49-51.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 49. Affliction Has No Cause'
+title: 'The Related Discourses | 35. Views | 49-51 (157). Affliction Has No Cause'
 type: kramdown
 base: ../../../
 previous: SA35_46.html
@@ -9,20 +9,23 @@ next: SA35_52.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 49. Affliction Has No Cause
+### 49-51 (157). Affliction Has No Cause
 
 1\. Thus I have heard:[\[1\]](#n1){:#ref1} One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds and is an attachment, and that’s viewed as self, which causes sentient beings to make such views and such statements as this? ‘The afflictions of sentient beings have no cause and no condition.’”[\[2\]](#n2){:#ref2}
+2\. It was then that the Bhagavān addressed the monks, “Because of what’s existence, what’s cause, being bound by what, adherence to what, and viewing what as self do sentient beings make such views and such statements as this? ‘The afflictions of sentient beings have no cause and no condition.’”[\[2\]](#n2){:#ref2}
 {: #p2}
 
 3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge …”
 {: #p3}
 
-*It’s thus explained in detail like the remainder of [35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like 35.8-9 above but with this introduction.*
+<em>It’s explained in detail the same as the remainder of [SĀ 35.7](SA35_7.html){:target="_blank"}, and the next two sūtras are like SĀ 35.8-9 above but with this introduction.</em>
+
+---
 
 ### Notes
+
 1. {:#n1}Parallels for this sūtra include [SN 24.7](https://suttacentral.net/sn24.7){:target="_blank"}. [\[back\]](#ref1)
 2. {:#n2}This wrong view is attributed to Makkhali Gosāla in [DN 2](https://suttacentral.net/dn2){:target="_blank"} and to Kakuda Katyāyana in [DĀ 27](../../dirgha/DA_27.html){:target="_blank"}. [\[back\]](#ref2)
 
