--- a/01_agama/samyukta/35/SA35_7.md
+++ b/01_agama/samyukta/35/SA35_7.md
@@ -1,6 +1,6 @@
 ---
 layout: default
-title: 'The Related Discourses | 35. Views | 7. The Cause of Attachment and Sorrow'
+title: 'The Related Discourses | 35. Views | 7 (139). The Cause of Attachment and Sorrow'
 type: kramdown
 base: ../../../
 previous: SA35_1.html
@@ -9,49 +9,52 @@ next: SA35_40.html
 
 # [The Related Discourses](../index.html)
 ## [35. Views](index.html)
-### 7. The Source of Suffering
+### 7 (139). The Source of Suffering
 
 1\. Thus I have heard: One time, the Buddha was staying at Anāthapiṇḍada’s Park in Jeta’s Grove of Śrāvastī.
 {: #p1}
 
-2\. It was then that the Bhagavān addressed the monks, “What is it that exists, that arises, that binds, that’s an attachment, and that’s viewed as self, which causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen?”
+2\. It was then that the Bhagavān addressed the monks, “Because of what’s existence, what’s cause, being bound by what, adherence to what, and viewing what as self causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen?”
 {: #p2}
 
-3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge. Please explain this in detail! After they hear it, the monks will accept and approve.”
+3\. The monks said to the Buddha, “The Bhagavān is the Dharma root, the Dharma eye, and the Dharma refuge! Please explain this in detail! After hearing it, we monks will accept and approve of it.”
 {: #p3}
 
-4\. The Buddha addressed the monks, “It’s because form exists and because form arises, binds, and becomes an attachment that it’s viewed as self. It causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen. *Feeling, conception, volition, and consciousness are likewise*.
+4\. The Buddha addressed the monks, “It’s because of form’s existence, form being something caused, being bound by form, adherence to form, and viewing form as self. This causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen. <em>Feeling, conception, volition, and consciousness are likewise</em>.
 {: #p4}
 
 5\. “Monks, what do you think? Is form permanent, or is it impermanent?”
 {: #p5}
 
-They replied, “Impermanent, Bhagavān!”
+“Impermanent, Bhagavān!”
 
-6\. Again, he asked, “If something is impermanent, is it painful?”
+6\. He again asked, “If something is impermanent, is it painful?”
 {: #p6}
 
-They replied, “It’s painful, Bhagavān!”
+“It’s painful, Bhagavān!”
 
-7\. “So it is, monks. If something is impermanent, then it’s painful. Because this pain exists, these things arise, tie, become attachments, and are viewed as self. It causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen. *Feeling, conception, volition, and consciousness are likewise*.
+7\. “So it is, monks. If something is impermanent, it’s painful. It’s because of this pain’s existence, it being something caused, being bound by it, adherence to it, and viewing it as self. This causes the arising of grief, sorrow, pain, and trouble that have yet to arise and increases the grief, sorrow, pain, and trouble that have already arisen. <em>Feeling, conception, volition, and consciousness are likewise</em>.
 {: #p7}
 
-8\. “Therefore, monks, all forms that exist, whether past, future, or present, internal or external, coarse or fine, beautiful or ugly, and distant or near are not self, not different than self, nor are either present in the other. This is called correct wisdom. *Feeling, conception, volition, and consciousness are likewise*.
+8\. “Therefore, monks, all forms that exist, whether past, future, or present, internal or external, coarse or fine, beautiful or ugly, and distant or near are not self, not different than self, nor are either present in the other. This is called correct wisdom. <em>Feeling, conception, volition, and consciousness are likewise</em>.
 {: #p8}
 
-9\. “Again, whether seen, heard, felt, cognized, arisen, or sought from memory, perception, or examination, they are all not self, not different than self, nor are either present in other. This is called correct wisdom
+9\. “Again, all that’s seen, heard, realized, recognized, sought, attained, remembered, considered, or examined is not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p9}
 
-10\. “If there’s a view that there’s a self, world, or this or another life that’s permanent, eternal, and unchanging, they are all not self, not different than self, nor are either present in the other. This is called correct wisdom.
+10\. “Suppose there’s the view: ‘There’s a self, there’s the world, and there’s this or another life. They are permanent, eternal, and not subject to change.’ All those things are not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p10}
 
-11\. “Again, if there’s a view that it’s not a self or what belongs to self of this life or not self or what belongs to self in the future [life], they are all not self, not different than self, nor are either present in the other. This is called correct wisdom.
+11\. “Again, suppose there’s this view: ‘That’s not the self of this life, doesn’t belong to the self of this life, isn’t a future self, and doesn’t belong to a future self.’ All those things are not self, not different than self, nor are either present in the other. This is called correct wisdom.
 {: #p11}
 
-12\. “Suppose well-versed noble disciples observe these six positions as not self and not what belongs to self. Such observation stops misgivings about the Buddha and stops misgivings about the Dharma and Saṃgha. Monks, this is called a well-versed noble disciple who’s no longer capable of doing physical, verbal, or mental actions that lead to the three bad destinies. Even when they are careless, this noble disciple is definitely headed toward complete awakening. With seven rebirths as gods or humans, they’ll reach the end of suffering.”
+12\. “Suppose a well-versed noble disciple observes these six abodes of views as not self and not belonging to self. Such observation ends suspicions about the Buddha and ends suspicions about the Dharma and Saṅgha.
 {: #p12}
 
-13\. After the Buddha taught this sūtra, the monks who heard what he taught rejoiced and approved.
+13\. Monks, this is called a well-versed noble disciple who is no longer capable of doing physical, verbal, or mental actions that lead to the three bad destinies. Even if they are negligent, this noble disciple is certainly headed for complete awakening. With seven rebirths in heaven or among humans, they’ll reach the limit of suffering.”
+{: #p13}
+
+13\. After the Buddha spoke this sūtra, the monks who heard what he taught rejoiced and approved.
 {: #p13}
 
 ---
