--- a/01_agama/ekottarika/08/EA_08_06.md
+++ b/01_agama/ekottarika/08/EA_08_06.md
@@ -35,7 +35,7 @@ next: EA_08_07.html
 
 Translator: Charles Patton
 {: .translator}
-Last Revised: 15 Fenruary 2023
+Last Revised: 15 February 2023
 {: .revised}
 
 ---
