--- a/01_agama/ekottarika/13/EA_13_04.md
+++ b/01_agama/ekottarika/13/EA_13_04.md
@@ -81,7 +81,7 @@ He replied, “Yes, Śāriputra,” and accepted a teaching from him.
 1. {:#n1} This <em>sūtra</em> is parallel with <a href="https://suttacentral.net/sn22.1/en/sujato" target="_blank">SN 22.1</a>. [\[back\]](#ref1)
 2. {:#n2} <em>the Yakṣiṇī’s Grove</em>. C. 鬼林, P. <em>bhesakaḷāvana</em>, S. <em>bhīsanikāvana</em>. In both the P. and S. tradition, this grove was named after a female <em>yakṣa</em> which was considered to be the forest’s guardian. 鬼 (“demon”) typically translated S. <em>yakṣa</em>, so I’ve chosen to translate the placename as the Yakṣiṇī’s Grove.<br/>
 <em>Śiśumāragiri</em>. 尸牧摩羅山 (EMC ʃɪi-mɪuk-mua-la + C. “mountain” = G. <em>śimukamara</em> = S. <em>śiśumāragiri</em>, “crocodile”), P. <em>susumāra</em>. This was the name of the capitol city of Bharga. It would seem that a corruption of the translit. has taken place, either in the original Pkt. or the C. text. The Taisho reading has <em>-muk-</em> where we would expect <em>-śu-</em>. The 翻梵語 (T2130.54.1043a2) tells us that 尸牧摩羅 means “child killer,” which is the lit. meaning of S. <em>śiśumāra</em> (<em>śiśu-</em> = child and <em>-māra</em> = killing). This confirms that it was the same placename (which idiomatically means “Mount Crocodile” in S.). Later C. editors corrected the translit. to 尸收摩羅 (EMC ʃɪi-ʃɪəu-mua-la = G. <em>śiśumara</em>), indicating that they were aware of the S. pronunciation.<br/>
-<em>the country of Bharga</em>. C. 拔祇國 (EMC bʌt-giĕ + C. “country” = G. <em>\*bhaga</em>), P. Bhagga, S. Bharga. I’ve adopted the S. attestation for the G., which lacks an attestation. Gāndhārī generally didn’t allow double consonants like S. <em>-rg-</em> and P. <em>-gg-</em>), so it likely would have been G. <em>bhaga</em>. [\[back\]](#ref2)
+<em>the country of Bharga</em>. C. 拔祇國 (EMC bʌt-giĕ + C. “country” = G. <em>\*bhaga</em>), P. Bhagga, S. Bharga. I’ve adopted the S. attestation for the G., which lacks an attestation. Gāndhārī generally didn’t allow double consonants like S. <em>-rg-</em> and P. <em>-gg-</em>, so it likely would have been G. <em>bhaga</em>. [\[back\]](#ref2)
 3. {:#n3} <em>Grandfather Nakula</em>. C. 那憂羅公 (EMC na-•ɪəu-la + C. “grandfather”? = G. <em>na’ulapida</em>? = S. <em>nakulapitā</em>, “Grandfather Nakula”?), P. <em>nakulapitā</em>. Another parallel is SĀ 1.175 (T99.107), where his name is translit. as 那拘羅 (EMC na-kɪu-la = G. <em>nakula</em> = S. <em>nakula</em>), which lacks the addition of P. <em>pitā</em>. 公 means “grandfather” or an “official” rather than simply “father,” indicating that perhaps the addition of <em>pitā</em> was more a comment on Nakula’s advanced years than a relationship to someone else. However, in the Theravāda <em>sutta</em>s there is a pair of characters called P. Nakulapitā (“Nakula’s father”) and P. Nakulamātā (“Nakula’s mother”), so perhaps the stories surrounding them differed from one tradition to the next. [\[back\]](#ref3)
 4. {:#n4} There are a couple notable differences between this translation of Nakula’s request and the one at the start of the <em>sūtra</em>. My assumption is that this is a case of inconsistent translation or perhaps the result of later editing and/or textual corruption, which are problems that we often contend with throughout EĀ. This version, though, appears to be closer to the original, given that here Nakula directly asks the Buddha about the nature of the body and its infirmities. [\[back\]](#ref4)
 
